readmy fix